// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders info message when no items match search 1`] = `
<article
  class="sc-jzJRlG gJWoAr sc-fjdhpX imnhIn"
>
  <h1
    class="sc-kAzzGY eWiINP sc-cSHVUG hOouba"
  >
    Bolverk failed to find items for 
    <strong
      class="sc-VigVT cSVrEB"
    >
      xxx
    </strong>
  </h1>
</article>
`;

exports[`renders loaded item 1`] = `
<article
  class="sc-jzJRlG gJWoAr sc-fjdhpX imnhIn"
>
  <h1
    class="sc-kAzzGY eWiINP sc-cSHVUG hOouba"
  >
    Items found for 
    <strong
      class="sc-VigVT cSVrEB"
    >
      ale
    </strong>
  </h1>
  <ul
    class="sc-gqjmRU exHRLl"
  >
    <li
      class="sc-htpNat hkrMkj"
    >
      <a
        class="sc-bxivhb jgmcrE"
        href="/item/alettes-bracelet"
      >
        <img
          class="sc-bdVaJa hpZUqN"
          src="undefinedalettes-bracelet.png"
        />
        <p
          class="sc-iwsKbI jrVOTo sc-EHOje RRuYV"
        >
          1
        </p>
      </a>
    </li>
    <li
      class="sc-htpNat hkrMkj"
    >
      <a
        class="sc-bxivhb jgmcrE"
        href="/item/whalebone-needle"
      >
        <img
          class="sc-bdVaJa hpZUqN"
          src="undefinedwhalebone-needle.png"
        />
        <p
          class="sc-iwsKbI jrVOTo sc-EHOje RRuYV"
        >
          1
        </p>
      </a>
    </li>
  </ul>
</article>
`;

exports[`renders loading state initially 1`] = `
<article
  class="sc-jzJRlG gJWoAr sc-fjdhpX imnhIn"
/>
`;
